--- a/style.css
+++ b/style.css
@@ -50,15 +50,37 @@
 
 
 }
+#AP{
+    position: absolute;
+    z-index: 265;
+    top:50%;
+    left:90%;
+    height:9%;
+    background-color: white;
+    color: black;
+    border: 2px solid #4CAF50;    
+    transition-duration: 0.4s;
+}
+#CP{
+    position: absolute;
+    z-index: 265;
+    top:60%;
+    left:90%;
+    height:9%;
+    background-color: white;
+    color: black;
+    border: 2px solid #4CAF50;    
+    transition-duration: 0.4s;
+}
 
-#DV:hover, #IV:hover,#DT:hover,#IT:hover{
+#DV:hover, #IV:hover,#DT:hover,#IT:hover,#CP:hover,#AP:hover{
 
     background-color: #4CAF50; /* Green */
     color: white;
 
 }
 
-#DV:active, #IV:active, #IT:active, #DT:active{
+#DV:active, #IV:active, #IT:active, #DT:active, #CP:active, #AP:active{
 
     background-color: aquamarine;
     color: black;
