--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     top:10%;
     left:90%;
     height:9%;
+    width:10%;
     background-color: white;
     color: black;
     border: 2px solid #4CAF50;
@@ -17,6 +18,7 @@
     top:20%;
     left:90%;
     height:9%;
+    width:10%;
     background-color: white;
     color: black;
     border: 2px solid #4CAF50;    
@@ -30,11 +32,12 @@
     top:30%;
     left:90%;
     height:9%;
+    width:10%;
     background-color: white;
     color: black;
     border: 2px solid #4CAF50;    
     transition-duration: 0.4s;
-
+    
 
 }
 #DT{
@@ -43,6 +46,7 @@
     top:40%;
     left:90%;
     height:9%;
+    width:10%;
     background-color: white;
     color: black;
     border: 2px solid #4CAF50;    
@@ -56,6 +60,7 @@
     top:50%;
     left:90%;
     height:9%;
+    width:10%;
     background-color: white;
     color: black;
     border: 2px solid #4CAF50;    
@@ -67,6 +72,7 @@
     top:60%;
     left:90%;
     height:9%;
+    width:10%;
     background-color: white;
     color: black;
     border: 2px solid #4CAF50;    
