--- a/style.css
+++ b/style.css
@@ -9,7 +9,8 @@
     color: black;
     border: 2px solid #4CAF50;
     transition-duration: 0.4s;
-
+    font-size: 1vw;
+    border-radius: 8px;
 }
 
 #DV{
@@ -23,6 +24,8 @@
     color: black;
     border: 2px solid #4CAF50;    
     transition-duration: 0.4s;
+    font-size: 1vw;
+    border-radius: 8px;
 
 
 }
@@ -37,7 +40,8 @@
     color: black;
     border: 2px solid #4CAF50;    
     transition-duration: 0.4s;
-    
+    font-size: 1vw;
+    border-radius: 8px;
 
 }
 #DT{
@@ -51,7 +55,8 @@
     color: black;
     border: 2px solid #4CAF50;    
     transition-duration: 0.4s;
-
+    font-size: 1vw;
+    border-radius: 8px;
 
 }
 #AP{
@@ -65,6 +70,9 @@
     color: black;
     border: 2px solid #4CAF50;    
     transition-duration: 0.4s;
+    font-size: 1vw;
+    border-radius: 8px;
+
 }
 #CP{
     position: absolute;
@@ -77,16 +85,37 @@
     color: black;
     border: 2px solid #4CAF50;    
     transition-duration: 0.4s;
+    font-size: 1vw;
+    border-radius: 8px;
+
 }
 
-#DV:hover, #IV:hover,#DT:hover,#IT:hover,#CP:hover,#AP:hover{
+#TG{
+
+    position: absolute;
+    z-index: 265;
+    top:3%;
+    left:47.5%;
+    height:5%;
+    width:5%;
+    background-color: white;
+    color: black;
+    border: 2px solid #4CAF50;    
+    transition-duration: 0.4s;
+    font-size: 1vw;
+    border-radius: 8px;
+
+
+}
+
+#DV:hover, #IV:hover,#DT:hover,#IT:hover,#CP:hover,#AP:hover, #TG:hover{
 
     background-color: #4CAF50; /* Green */
     color: white;
 
 }
 
-#DV:active, #IV:active, #IT:active, #DT:active, #CP:active, #AP:active{
+#DV:active, #IV:active, #IT:active, #DT:active, #CP:active, #AP:active, #TG:active{
 
     background-color: aquamarine;
     color: black;
