--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+body{
+
+    overflow:hidden;
+
+}
+
 #IV{
     position: absolute;
     z-index: 265;
@@ -121,3 +127,74 @@
     color: black;
 
 }
+
+
+
+
+#constants{
+
+    background-color: #001f3f;
+    position: absolute;
+    width:100%;
+    height:10%;
+    top:90%;
+    
+    padding-top:1vh;
+    padding-left:3%;
+
+}
+
+
+.button{
+    height:9%;
+    width:10%;
+    min-width:40px;
+    min-height:35px;
+    max-width:200px;
+    max-height:180px;
+}
+.button:hover{
+    cursor: pointer;
+}
+
+
+.constant{
+
+    position: relative;
+
+    text-align:center;
+    background-color: #008CBA;
+    
+    height:75%;
+    width:15%;
+
+    border: 2px solid #000000;    
+    transition-duration: 0.25s;
+    font-size: 1vw;
+    border-radius: 8px;
+
+}
+
+
+.constant:hover{
+
+    background-color: #22AEDC;
+    width:17%;
+    cursor: pointer;
+
+}
+.constant:active{
+
+    background-color: darkorange;
+    width:19%;
+
+}
+.constant:disabled{
+
+    background-color: darkred;
+    color:white;
+    cursor: not-allowed;
+
+}
+
+.constant:
